RESOLVED FIXED113236
JSObject::enterDictionaryIndexingMode doesn't have a case for ALL_BLANK_INDEXING_TYPES
https://bugs.webkit.org/show_bug.cgi?id=113236
Summary JSObject::enterDictionaryIndexingMode doesn't have a case for ALL_BLANK_INDEX...
Mark Hahnenberg
Reported 2013-03-25 12:57:47 PDT
It needs one, or else we can cause crashes because we won't actually create the ArrayStorage.
Attachments
Patch (4.19 KB, patch)
2013-03-25 13:32 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2013-03-25 13:09:58 PDT
Mark Hahnenberg
Comment 2 2013-03-25 13:32:34 PDT
Geoffrey Garen
Comment 3 2013-03-25 15:47:10 PDT
Comment on attachment 194914 [details] Patch r=me
WebKit Review Bot
Comment 4 2013-03-25 17:17:15 PDT
Comment on attachment 194914 [details] Patch Clearing flags on attachment: 194914 Committed r146829: <http://trac.webkit.org/changeset/146829>
WebKit Review Bot
Comment 5 2013-03-25 17:17:18 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2021-05-07 13:04:54 PDT
*** Bug 112954 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.