JSObject::enterDictionaryIndexingMode doesn't have a case for ALL_BLANK_INDEXING_TYPES https://bugs.webkit.org/show_bug.cgi?id=113236

Reviewed by Geoffrey Garen.

Source/JavaScriptCore:

* runtime/JSObject.cpp:
(JSC::JSObject::enterDictionaryIndexingMode): We forgot blank indexing types.

LayoutTests:

New test case that tests calling Object.freeze on Array.prototype.

* fast/js/enter-dictionary-indexing-mode-with-blank-indexing-type-expected.txt: Added.
* fast/js/enter-dictionary-indexing-mode-with-blank-indexing-type.html: Added.
* fast/js/script-tests/enter-dictionary-indexing-mode-with-blank-indexing-type.js: Added.


Canonical link: https://commits.webkit.org/131581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146829 268f45cc-cd09-0410-ab3c-d52691b4dbfc